--- a/public/css/front/sass/base/_variables.scss
+++ b/public/css/front/sass/base/_variables.scss
@@ -1,1 +1,11 @@
 $fontArial : Arial,Helvetica,sans-serif;
+$fontMainColor : #1a0d04;
+$fontSize : 1.1em;
+$lineHeight : 1.2em;
+
+$brownDark : #1A0D04;
+$brownMedium : #2B1608;
+$brownLight : #361C0A;
+$green : #93B85F;
+$greenMedium : #6DAA18;
+$greenDark : #2F4B09;
