--- a/public/css/front/sass/components/_header.scss
+++ b/public/css/front/sass/components/_header.scss
@@ -1,5 +1,5 @@
 header#mdp-header-container {
-	background: #1A0D04 none repeat scroll 0% 0%;
+	background: $brownDark none repeat scroll 0% 0%;
 	width:100%;
 	#mdp-header-logo-container {
 		max-width: 990px;
@@ -10,13 +10,12 @@ header#mdp-header-container {
 	}
 
 	nav {
-		background: transparent linear-gradient(to bottom, #2B1608 0%, #1A0D04 100%) repeat scroll 0% 0%;
-		box-shadow: 0 -5px 20px 5px #000;
+		background: transparent linear-gradient(to bottom, $brownMedium 0%, $brownDark 100%) repeat scroll 0% 0%;
+		box-shadow: 0 -5px 20px 5px black;
 		width: 100%;
 
+
 		ul {
-			font-size: 0;
-			height: 40px;
 			margin: 0 auto;
 			max-width: 990px;
 			display:flex;
@@ -24,21 +23,25 @@ header#mdp-header-container {
 			justify-content:center;
 
 			li {
+				list-style:none;
+				padding: 0;
+				height: 38px;
 
 				a {
-					color: #93B85F;
+					color: $green;
 					display: block;
 					font-family: $fontArial;
-					font-size: 12px;
+					line-height: $lineHeight;
+					font-size:$fontSize;
 					font-weight: bold;
 					height: 20px;
 					letter-spacing: 1px;
-					padding: 10px 40px;					
+					padding: 10px 35px;
 					text-align:center;
 				}
 
 				&:hover {
-					background-color:#361C0A;
+					background-color:$brownLight;
 				}
 			}
 		}
