--- a/public/css/front/style.scss
+++ b/public/css/front/style.scss
@@ -13,12 +13,14 @@
  
 @import "sass/components/header";
 
+@import "sass/components/sidebar";
+
 /*
 |--------------------------------------------------------------------------
 | Layouts
 |--------------------------------------------------------------------------
 */
 
-
+@import "sass/layout/post";
 
 
