sidebar et reglages divers

--- a/public/css/front/sass/base/_variables.scss
+++ b/public/css/front/sass/base/_variables.scss
@@ -1,4 +1,5 @@
 $fontArial : Arial,Helvetica,sans-serif;
+$fontGeorgia : Georgia,"Times New Roman",Times,serif;
 $fontMainColor : #1a0d04;
 $fontSize : 1.1em;
 $lineHeight : 1.2em;
