--- a/public/css/front/sass/components/_header.scss
+++ b/public/css/front/sass/components/_header.scss
@@ -34,7 +34,7 @@ header#mdp-header-container {
 					line-height: $lineHeight;
 					font-size:$fontSize;
 					font-weight: bold;
-					height: 20px;
+					height: auto;
 					letter-spacing: 1px;
 					padding: 10px 35px;
 					text-align:center;
